[workspace]
resolver = "3"
members = ["best-time-to-buy-and-sell-stock", "best-time-to-buy-and-sell-stock-ii", "candy", "gas_station", "jump-game", "jump-game-ii", "length_of_last_word", "longest_common_prefix","majority-element","merge-sorted-array", "playground", "product_of_array_except_self", "remove-duplicates-from-sorted-array", "remove-duplicates-from-sorted-array-ii", "remove-element", "reverse_words_in_a_string", "rotate-array", "text-justification", "trapping-rain-water", "valid_palindrome", "zigzag_conversion"]
